{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 13,
  "lineage": "3d115cf3-ea7f-b029-86e7-009381b9ca7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6719807ab6f19c2",
            "arn": "arn:aws:ec2:us-east-1:844416514196:elastic-ip/eipalloc-0c6719807ab6f19c2",
            "domain": "vpc",
            "id": "eipalloc-0c6719807ab6f19c2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-73-196-245.compute-1.amazonaws.com",
            "public_ip": "52.73.196.245",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group/sg-0c2ea46f19c38ead7",
            "description": "managed by terraform",
            "egress": [],
            "id": "sg-0c2ea46f19c38ead7",
            "ingress": [],
            "name": "attribute-sg",
            "name_prefix": "",
            "owner_id": "844416514196",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004d3065b8de617b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sg-0c2ea46f19c38ead7",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-0856108d4cab8d44b",
            "cidr_ipv4": "52.73.196.245/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0856108d4cab8d44b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c2ea46f19c38ead7",
            "security_group_rule_id": "sgr-0856108d4cab8d44b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-0856108d4cab8d44b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}